ver: 1.0.0
- Initial commit

ver: 1.0.1
- Non Multisite check issue fixed.

ver: 1.0.2
- Content slashes escaping added.